--- a/style.css
+++ b/style.css
@@ -90,7 +90,9 @@ section.imagem1 > p{
     background-color: #302f2c75;
     color: white;
     text-shadow: 1px 1px 0px black;
-    margin: 100px 0px 0px 0px;
+    margin: auto;
+    margin-top: 100px;
+
 
 }
 
@@ -109,7 +111,8 @@ section.imagem2 > div{
     background-color: #302f2c75;
     color: white;
     text-shadow: 1px 1px 0px black;
-    margin: 50px 0px 0px 0px;
+    margin: auto;
+    margin-top: 50px;
 }
 section > p{
     text-indent: 20px;
